tests/reference/asr-intrinsics10-ccd6322.stderr
semantic error: Type and kind of the relevant arguments of Ieor must be the same
 --> tests/errors/intrinsics10.f90:4:14
  |
4 |     print *, ieor(x, y)
  |              ^^^^^^^^^^ 
